<resources>
    <string name="app_name">My Application2</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="successful">Welcome!</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="create_your_login">Create your login</string>
    <string name="Create_your_password">Create your password</string>
    <string name="Create">Create</string>
    <string name="sigh_up">Sigh up</string>
    <string name="nothing"></string>
</resources>